<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RingerChangedActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_label"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radioButton_private"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/privateradio_label" />

            <RadioButton
                android:id="@+id/radioButton_public"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/publicradio_label" />

        </RadioGroup>

        <Spinner
            android:id="@+id/spinner_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/locations_array"
            android:spinnerMode="dialog" />

        <Button
            android:id="@+id/social_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/social_btn_label"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/textView_social"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_ongoing_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ongoing_activity_label" />

        <Spinner
            android:id="@+id/spinner_activity_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/activitytype_array"
            android:spinnerMode="dialog" />

        <Spinner
            android:id="@+id/spinner_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/activity_array"
            android:spinnerMode="dialog" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel_btn" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/submit_btn" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>